[gd_scene load_steps=6 format=3 uid="uid://ct4fegnfrrj00"]

[ext_resource type="Script" path="res://scripts/screens.gd" id="1_xc70i"]
[ext_resource type="Texture2D" uid="uid://ebdh0nfkte80" path="res://assets/textures/ui/gear.png" id="2_ulgu7"]
[ext_resource type="PackedScene" uid="uid://bq643238kf30w" path="res://scenes/title_screen.tscn" id="3_8cx7v"]
[ext_resource type="PackedScene" uid="uid://b38n76vovw3h8" path="res://scenes/pause_screen.tscn" id="3_egbxg"]
[ext_resource type="PackedScene" uid="uid://2gf1oj5577ds" path="res://scenes/game_over_screen.tscn" id="4_lpcms"]

[node name="Screens" type="CanvasLayer"]
script = ExtResource("1_xc70i")

[node name="TitleScreen" parent="." instance=ExtResource("3_8cx7v")]

[node name="PauseScreen" parent="." instance=ExtResource("3_egbxg")]

[node name="GameOverScreen" parent="." instance=ExtResource("4_lpcms")]

[node name="Debug" type="Control" parent="."]
z_index = 4000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConsoleLog" type="Control" parent="Debug" groups=["debug_console"]]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackBG" type="ColorRect" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.666667)

[node name="BuildNoLabel" type="Label" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -254.0
offset_top = 16.0
offset_right = 254.0
offset_bottom = 42.0
grow_horizontal = 2
text = "Build: 0.1.0"

[node name="ScrollContainer" type="ScrollContainer" parent="Debug/ConsoleLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = 51.0
offset_right = -18.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Debug/ConsoleLog/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogLabel" type="Label" parent="Debug/ConsoleLog/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ToggleConsole" type="TextureButton" parent="Debug"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -52.0
offset_right = 53.0
grow_vertical = 0
texture_normal = ExtResource("2_ulgu7")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="Debug/ToggleConsole" to="." method="_on_toggle_console_pressed"]
